--- a/parser-roman.cabal
+++ b/parser-roman.cabal
@@ -21,6 +21,7 @@ library
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.7 && <4.8
-                     , parsec >= 3 && < 4
+                     , attoparsec
+                     , text
   hs-source-dirs:      src
   default-language:    Haskell2010
