--- a/parser-roman.cabal
+++ b/parser-roman.cabal
@@ -34,5 +34,7 @@ Test-Suite Roman-Unit-Test
   build-depends:      base
                     , parser-roman
                     , HUnit
+                    , test-framework
+                    , test-framework-hunit
                     , attoparsec
                     , text
